--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,104 @@
-uvicorn
-fastapi
-pydantic
-scikit-learn
-pandas
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.3.0
+boto3==1.34.111
+botocore==1.34.111
+certifi==2023.7.22
+chardet==4.0.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cycler==0.10.0
+dnspython==2.6.1
+email_validator==2.1.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+filelock==3.14.0
+fire==0.6.0
+fonttools==4.51.0
+fsspec==2024.5.0
+gitdb==4.0.11
+GitPython==3.1.43
+grpcio==1.64.0
+gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.1
+idna==2.10
+intel-openmp==2021.4.0
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+kiwisolver==1.4.5
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mdurl==0.1.2
+mkl==2021.4.0
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
+opencv-python==4.8.1.78
+opencv-python-headless==4.8.0.74
+orjson==3.10.3
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+protobuf==5.26.1
+psutil==5.9.8
+py-cpuinfo==9.0.0
+pybboxes==0.1.6
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-magic==0.4.27
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.2
+requests-toolbelt==1.0.0
+rich==13.7.1
+roboflow==1.1.29
+s3transfer==0.10.1
+sahi==0.11.16
+scikit-learn==1.5.0
+scipy==1.13.1
+seaborn==0.13.2
+setuptools==70.0.0
+shapely==2.0.4
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+starlette==0.37.2
+sympy==1.12
+tbb==2021.12.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+termcolor==2.4.0
+terminaltables==3.1.10
+thop==0.1.1.post2209072238
+threadpoolctl==3.5.0
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
+tqdm==4.66.4
+typer==0.12.3
+typing_extensions==4.11.0
+tzdata==2024.1
+ujson==5.10.0
+ultralytics==8.2.19
+urllib3==2.2.1
+uvicorn==0.29.0
+watchfiles==0.21.0
+websockets==12.0
+Werkzeug==3.0.3
+wheel==0.43.0
+yolov5==7.0.13
